Changed title styling, fixed user export and import bugs and error handling
There was a bug where importing a user with the same name as an alias messed up teams - had
to change the format so it saved if the team member was an alias or a user.

There were also issues with duplicate code in loading users, and a few other bits - mostly cleaned up

--- a/src/css/main_areas.scss
+++ b/src/css/main_areas.scss
@@ -1,10 +1,15 @@
 /* the main top-level areas */
 
 .App-header {
-  text-align: center;
+  /* using flexbox to have the h1 centered, and two h3s left and right (the right one is blank */
+  display: flex;
   h1 {
     font-size: 2rem;
     margin: 0.3em 0;
+  }
+  h3 {
+    flex: 1;
+    margin: 0.5em 0;
   }
 }
 
