--- a/src/css/main_grid.scss
+++ b/src/css/main_grid.scss
@@ -43,7 +43,6 @@
     auto
     1154px
     auto;
-  min-height: 100vh;
   justify-content: center;
 }
 
